feat(assets): rename all source product photos + expand fashion model generator to 20 products
- Renamed 40 source product photos across black-rose/, love-hurts/, signature/ to
  descriptive format: {id}-{product}-{view}.{ext}
  e.g. PhotoRoom_011_20230616_170635.png → br-001-crewneck-front.png
- Moved BR-007 collab piece (IMG_1733.jpeg) from love-hurts/ to black-rose/
- Updated products-catalog.html PRODUCTS array to reference all new filenames
- Expanded generate-fashion-models.js from 8 → 20 products, all with named reference
  images (32 refs total, 0 missing)
- Fixed 4 wrong product assignments in fashion model generator:
  BR-004 was "Beanie" with jogger ref → corrected to "Hoodie" with br-004-hoodie-front.png
  LH-001 was using shorts photo → corrected to fanny pack lh-001-fannie-front-*.jpeg
  SG-001 was "Golden Gate Shorts" → corrected to "The Bay Set" sg-001-bay-set-*.jpg
  SG-002 was "SF Rose White Tee" → corrected to "Stay Golden Set" sg-002-stay-golden-set.jpg
- Added build/rename-assets.js: dry-run safe rename script with unmapped file report

--- a/skyyrose/assets/data/products-catalog.html
+++ b/skyyrose/assets/data/products-catalog.html
@@ -72,8 +72,8 @@ const PRODUCTS = [
     id:'BR-001', col:'black-rose', colClass:'br',
     name:'BLACK Rose Crewneck', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'PhotoRoom_011_20230616_170635.png', view:'Front'},
-      {file:'PhotoRoom_001_20230616_170635.PNG',  view:'Back'},
+      {file:'br-001-crewneck-front.png', view:'Front'},
+      {file:'br-001-crewneck-back.png',  view:'Back'},
     ],
     notes:'The Crew'
   },
@@ -81,7 +81,7 @@ const PRODUCTS = [
     id:'BR-002', col:'black-rose', colClass:'br',
     name:'BLACK Rose Joggers', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'PhotoRoom_010_20231221_160237.jpeg', view:''},
+      {file:'br-002-joggers.jpeg', view:''},
     ],
     notes:'The Joggers'
   },
@@ -89,12 +89,12 @@ const PRODUCTS = [
     id:'BR-003', col:'black-rose', colClass:'br',
     name:'BLACK is Beautiful Jersey', status:'Pre-Order', colorway:'Last Oakland / Giants',
     photos:[
-      {file:'266AD7B0-88A6-4489-AA58-AB72A575BD33 3.JPG', view:'Back', color:'Last Oakland'},
-      {file:'5A8946B1-B51F-4144-BCBB-F028462077A0.jpg',   view:'Front', color:'Last Oakland'},
-      {file:'PhotoRoom_003_20230616_170635 (1).png',       view:'Back', color:'Giants'},
-      {file:'BLACK is Beautiful Giants Front.jpg',          view:'Front', color:'Giants'},
-      {file:'PhotoRoom_000_20230616_170635.png',            view:''},
-      {file:'The BLACK Jersey (BLACK Rose Collection).jpg', view:'Front'},
+      {file:'br-003-jersey-last-oakland-back.jpg',  view:'Back',  color:'Last Oakland'},
+      {file:'br-003-jersey-last-oakland-front.jpg', view:'Front', color:'Last Oakland'},
+      {file:'br-003-jersey-giants-back.png',        view:'Back',  color:'Giants'},
+      {file:'br-003-jersey-giants-front.jpg',       view:'Front', color:'Giants'},
+      {file:'br-003-jersey-alt.png',                view:''},
+      {file:'br-003-jersey-black-front.jpg',        view:'Front'},
     ],
     notes:'2 colorways: Last Oakland + Giants'
   },
@@ -102,7 +102,7 @@ const PRODUCTS = [
     id:'BR-004', col:'black-rose', colClass:'br',
     name:'BLACK Rose Hoodie', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'PhotoRoom_001_20230523_204834.PNG', view:'Front'},
+      {file:'br-004-hoodie-front.png', view:'Front'},
     ],
     notes:''
   },
@@ -110,7 +110,7 @@ const PRODUCTS = [
     id:'BR-005', col:'black-rose', colClass:'br',
     name:'BLACK Rose Hoodie — Signature Edition', status:'Available', colorway:'',
     photos:[
-      {file:'PhotoRoom_008_20221210_093149.PNG', view:'Front'},
+      {file:'br-005-hoodie-signature-front.png', view:'Front'},
     ],
     notes:''
   },
@@ -118,8 +118,8 @@ const PRODUCTS = [
     id:'BR-006', col:'black-rose', colClass:'br',
     name:'BLACK Rose Sherpa Jacket', status:'Pre-Order', colorway:'Sherpa',
     photos:[
-      {file:'The BLACK Rose Sherpa Front.jpg', view:'Front'},
-      {file:'The BLACK Rose Sherpa Back.jpg',  view:'Back'},
+      {file:'br-006-sherpa-front.jpg', view:'Front'},
+      {file:'br-006-sherpa-back.jpg',  view:'Back'},
     ],
     notes:'Also called Bomber'
   },
@@ -127,9 +127,9 @@ const PRODUCTS = [
     id:'BR-007', col:'black-rose', colClass:'br',
     name:'BLACK Rose × Love Hurts Basketball Shorts', status:'Available', colorway:'',
     photos:[
-      {file:'PhotoRoom_20221110_201933.PNG', view:'Front'},
-      {file:'PhotoRoom_20221110_202133.PNG', view:'Side'},
-      {file:'IMG_1733.jpeg',                view:''},
+      {file:'br-007-shorts-front.png', view:'Front'},
+      {file:'br-007-shorts-side.png',  view:'Side'},
+      {file:'br-007-shorts-alt.jpeg',  view:''},
     ],
     notes:'Collab piece'
   },
@@ -137,7 +137,7 @@ const PRODUCTS = [
     id:'BR-008', col:'black-rose', colClass:'br',
     name:"Women's BLACK Rose Hooded Dress", status:'Pre-Order', colorway:'',
     photos:[
-      {file:'Womens Black Rose Hooded Dress.jpeg', view:'Front'},
+      {file:'br-008-hooded-dress-front.jpeg', view:'Front'},
     ],
     notes:''
   },
@@ -147,8 +147,8 @@ const PRODUCTS = [
     id:'LH-001', col:'love-hurts', colClass:'lh',
     name:'The Fannie', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'IMG_0117.jpeg',                                view:'Front-1'},
-      {file:'4074E988-4DAF-4221-8446-4B93422AF437.jpg',    view:'Front-2'},
+      {file:'lh-001-fannie-front-1.jpeg', view:'Front-1'},
+      {file:'lh-001-fannie-front-2.jpg',  view:'Front-2'},
     ],
     notes:'Fanny pack / waist bag'
   },
@@ -156,9 +156,9 @@ const PRODUCTS = [
     id:'LH-002', col:'love-hurts', colClass:'lh',
     name:'Love Hurts Joggers', status:'Available', colorway:'Black / White',
     photos:[
-      {file:'IMG_2102.png', view:'', color:'Black'},
-      {file:'IMG_2103.png', view:'', color:'White'},
-      {file:'IMG_2105.png', view:'', color:'White'},
+      {file:'lh-002-joggers-black.png',   view:'', color:'Black'},
+      {file:'lh-002-joggers-white-1.png', view:'', color:'White'},
+      {file:'lh-002-joggers-white-2.png', view:'', color:'White'},
     ],
     notes:'2 colorways'
   },
@@ -166,9 +166,9 @@ const PRODUCTS = [
     id:'LH-003', col:'love-hurts', colClass:'lh',
     name:'Love Hurts Basketball Shorts', status:'Available', colorway:'',
     photos:[
-      {file:'PhotoRoom_004_20221110_200039.png', view:'Side'},
-      {file:'PhotoRoom_003_20221110_200039.png', view:'Side-2'},
-      {file:'PhotoRoom_018_20231221_160237.jpeg',view:'Front'},
+      {file:'lh-003-shorts-side.png',   view:'Side'},
+      {file:'lh-003-shorts-side-2.png', view:'Side-2'},
+      {file:'lh-003-shorts-front.jpeg', view:'Front'},
     ],
     notes:''
   },
@@ -178,8 +178,8 @@ const PRODUCTS = [
     id:'SG-001', col:'signature', colClass:'sg',
     name:'The Bay Set', status:'Pre-Order', colorway:'Bay',
     photos:[
-      {file:'0F85F48C-364B-43CB-8297-E90BB7B8BB51 2.jpg', view:'1'},
-      {file:'24661692-0F81-43F4-AA69-7E026552914A.jpg',   view:'2'},
+      {file:'sg-001-bay-set-1.jpg', view:'1'},
+      {file:'sg-001-bay-set-2.jpg', view:'2'},
     ],
     notes:'Full set'
   },
@@ -187,7 +187,7 @@ const PRODUCTS = [
     id:'SG-002', col:'signature', colClass:'sg',
     name:'Stay Golden Set', status:'Pre-Order', colorway:'Golden',
     photos:[
-      {file:'562143CF-4A77-42B8-A58C-C77ED21E9B5E.jpg', view:'1'},
+      {file:'sg-002-stay-golden-set.jpg', view:'1'},
     ],
     notes:'Full set'
   },
@@ -195,8 +195,8 @@ const PRODUCTS = [
     id:'SG-003', col:'signature', colClass:'sg',
     name:'The Signature Tee', status:'Available', colorway:'Orchid',
     photos:[
-      {file:'IMG_0553.JPG',           view:'Front'},
-      {file:'Signature T \u201cOrchard\u201d.jpeg', view:''},
+      {file:'sg-003-tee-orchid-front.jpg', view:'Front'},
+      {file:'sg-003-tee-orchid.jpeg',      view:''},
     ],
     notes:''
   },
@@ -204,8 +204,8 @@ const PRODUCTS = [
     id:'SG-004', col:'signature', colClass:'sg',
     name:'The Signature Tee', status:'Available', colorway:'White',
     photos:[
-      {file:'IMG_0554.JPG',           view:'Front'},
-      {file:'Signature T \u201cWhite\u201d.jpeg',  view:''},
+      {file:'sg-004-tee-white-front.jpg', view:'Front'},
+      {file:'sg-004-tee-white.jpeg',      view:''},
     ],
     notes:''
   },
@@ -213,7 +213,7 @@ const PRODUCTS = [
     id:'SG-005', col:'signature', colClass:'sg',
     name:'Stay Golden Tee', status:'Available', colorway:'Golden',
     photos:[
-      {file:'Photo Dec 18 2023, 6 09 21 PM.jpg', view:''},
+      {file:'sg-005-stay-golden-tee.jpg', view:''},
     ],
     notes:''
   },
@@ -221,9 +221,9 @@ const PRODUCTS = [
     id:'SG-006', col:'signature', colClass:'sg',
     name:'Mint & Lavender Hoodie', status:'Available', colorway:'Mint / Lavender',
     photos:[
-      {file:'PhotoRoom_004_20231221_160237.jpeg',         view:'Front'},
-      {file:'Mint & Lavender Set (Sold Separately) .jpeg',view:'Set'},
-      {file:'MINT & Lavender Set 2 .jpeg',                view:'Set 2'},
+      {file:'sg-006-mint-lavender-hoodie-front.jpeg', view:'Front'},
+      {file:'sg-006-mint-lavender-set-1.jpeg',        view:'Set'},
+      {file:'sg-006-mint-lavender-set-2.jpeg',        view:'Set 2'},
     ],
     notes:'Signature Collection hoodie'
   },
@@ -231,7 +231,7 @@ const PRODUCTS = [
     id:'SG-007', col:'signature', colClass:'sg',
     name:'The Signature Beanie', status:'Available', colorway:'Red',
     photos:[
-      {file:'Photoroom_010_20240926_104051.jpg', view:''},
+      {file:'sg-007-beanie-red.jpg', view:''},
     ],
     notes:''
   },
@@ -239,7 +239,7 @@ const PRODUCTS = [
     id:'SG-008', col:'signature', colClass:'sg',
     name:'The Signature Beanie', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'PhotoRoom_000_20221210_093149.png', view:''},
+      {file:'sg-008-beanie.png', view:''},
     ],
     notes:'Moved from Love Hurts'
   },
@@ -247,8 +247,8 @@ const PRODUCTS = [
     id:'SG-009', col:'signature', colClass:'sg',
     name:'The Sherpa Jacket', status:'Pre-Order', colorway:'',
     photos:[
-      {file:'PhotoRoom_002_20231221_072338.jpg', view:'Front'},
-      {file:'PhotoRoom_003_20231221_072338.jpg', view:'Back'},
+      {file:'sg-009-sherpa-front.jpg', view:'Front'},
+      {file:'sg-009-sherpa-back.jpg',  view:'Back'},
     ],
     notes:'Moved from Love Hurts'
   },
